deployments/kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-dash
  namespace: home
spec:
  type: NodePort
  selector:
    app: app-dash
  ports:
    - port: 8080
      targetPort: 8080
